--- a/analise_dados_enem2012-2018.ipynb
+++ b/analise_dados_enem2012-2018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -137,62 +137,125 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Inscritos</th>\n",
-       "      <td>8627367</td>\n",
-       "      <td>7173563</td>\n",
-       "      <td>8722248</td>\n",
-       "      <td>7746427</td>\n",
-       "      <td>5791065</td>\n",
-       "      <td>6731341</td>\n",
-       "      <td>5513747</td>\n",
+       "      <td>8627367.00</td>\n",
+       "      <td>7173563.00</td>\n",
+       "      <td>8722248.00</td>\n",
+       "      <td>7746427.00</td>\n",
+       "      <td>5791065.00</td>\n",
+       "      <td>6731341.00</td>\n",
+       "      <td>5513747.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Deficientes Fisicos</th>\n",
-       "      <td>22369</td>\n",
-       "      <td>13435</td>\n",
-       "      <td>22245</td>\n",
-       "      <td>19054</td>\n",
-       "      <td>4982</td>\n",
-       "      <td>12424</td>\n",
-       "      <td>8929</td>\n",
+       "      <td>22369.00</td>\n",
+       "      <td>13435.00</td>\n",
+       "      <td>22245.00</td>\n",
+       "      <td>19054.00</td>\n",
+       "      <td>4982.00</td>\n",
+       "      <td>12424.00</td>\n",
+       "      <td>8929.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Deficientes Auditivos</th>\n",
-       "      <td>7131</td>\n",
-       "      <td>3217</td>\n",
-       "      <td>6448</td>\n",
-       "      <td>6308</td>\n",
-       "      <td>1169</td>\n",
-       "      <td>4390</td>\n",
-       "      <td>2416</td>\n",
+       "      <td>7131.00</td>\n",
+       "      <td>3217.00</td>\n",
+       "      <td>6448.00</td>\n",
+       "      <td>6308.00</td>\n",
+       "      <td>1169.00</td>\n",
+       "      <td>4390.00</td>\n",
+       "      <td>2416.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Deficientes Fisicos (%)</th>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Deficientes Auditivos (%)</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inscrições normais (%)</th>\n",
+       "      <td>99.66</td>\n",
+       "      <td>99.77</td>\n",
+       "      <td>99.67</td>\n",
+       "      <td>99.67</td>\n",
+       "      <td>99.89</td>\n",
+       "      <td>99.75</td>\n",
+       "      <td>99.79</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          2012     2013     2014     2015     2016     2017  \\\n",
-       "Inscritos              8627367  7173563  8722248  7746427  5791065  6731341   \n",
-       "Deficientes Fisicos      22369    13435    22245    19054     4982    12424   \n",
-       "Deficientes Auditivos     7131     3217     6448     6308     1169     4390   \n",
+       "                                 2012        2013        2014        2015  \\\n",
+       "Inscritos                  8627367.00  7173563.00  8722248.00  7746427.00   \n",
+       "Deficientes Fisicos          22369.00    13435.00    22245.00    19054.00   \n",
+       "Deficientes Auditivos         7131.00     3217.00     6448.00     6308.00   \n",
+       "Deficientes Fisicos (%)          0.26        0.19        0.26        0.25   \n",
+       "Deficientes Auditivos (%)        0.08        0.04        0.07        0.08   \n",
+       "Inscrições normais (%)          99.66       99.77       99.67       99.67   \n",
        "\n",
-       "                          2018  \n",
-       "Inscritos              5513747  \n",
-       "Deficientes Fisicos       8929  \n",
-       "Deficientes Auditivos     2416  "
+       "                                 2016        2017        2018  \n",
+       "Inscritos                  5791065.00  6731341.00  5513747.00  \n",
+       "Deficientes Fisicos           4982.00    12424.00     8929.00  \n",
+       "Deficientes Auditivos         1169.00     4390.00     2416.00  \n",
+       "Deficientes Fisicos (%)          0.09        0.18        0.16  \n",
+       "Deficientes Auditivos (%)        0.02        0.07        0.04  \n",
+       "Inscrições normais (%)          99.89       99.75       99.79  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Tabela para visualização dos dados\n",
+    "porcent_inscritos = []\n",
+    "porcent_fisico = []\n",
+    "porcent_auditivo = []\n",
+    "for i in range(len(anos)):\n",
+    "    porcent_fisico.append(round((fisico[i]/inscritos[i])*100, 2))\n",
+    "    porcent_auditivo.append(round((auditivo[i]/inscritos[i])*100, 2))\n",
+    "    porcent_inscritos.append(round((1-(auditivo[i]+fisico[i])/inscritos[i])*100, 2))\n",
+    "    #porcent_inscritos.append(round(((inscritos[i]/(fisico[i]+auditivo[i]))*100, 2))\n",
+    "    \n",
     "tabela = {}\n",
+    "\n",
     "for i in range(len(anos)):    \n",
-    "    tabela.update({anos[i]: [inscritos[i], fisico[i], auditivo[i]]})\n",
-    "df_tabela = pd.DataFrame(tabela, columns=anos, index=['Inscritos','Deficientes Fisicos', 'Deficientes Auditivos'])\n",
+    "    tabela.update({anos[i]: [inscritos[i], fisico[i], auditivo[i], porcent_fisico[i], porcent_auditivo[i], porcent_inscritos[i]]})\n",
+    "df_tabela = pd.DataFrame(tabela, columns=anos, index=['Inscritos','Deficientes Fisicos', 'Deficientes Auditivos', 'Deficientes Fisicos (%)', 'Deficientes Auditivos (%)', 'Inscrições normais (%)'])\n",
     "df_tabela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99.66, 99.77, 99.67, 99.67, 99.89, 99.75, 99.79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(porcent_inscritos)"
    ]
   },
   {
